--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <header class="header">
     <div class="container">
-      <h1> Fun Bus </h1>
+      <div class="text-content">
+        <h1> Fun Bus </h1>
+      </div>
       <nav class="nav">
         <a href="#">Home</a>
         <a href="#">About Us</a>
